--- a/style.css
+++ b/style.css
@@ -190,6 +190,32 @@ li:last-child {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     animation: fadeIn 0.5s, fadeOut 0.5s 3s forwards;
 }
+
+/* Estilo para os modais */
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    width: 300px;
+    text-align: center;
+}
+
+.modal-buttons button {
+    margin: 10px;
+}
+
 @keyframes fadeIn {
     from { opacity: 0; transform: translateY(-10px); }
     to { opacity: 1; transform: translateY(0); }
