--- a/style.css
+++ b/style.css
@@ -216,6 +216,26 @@ li:last-child {
     margin: 10px;
 }
 
+/* Estilo para o modal de carregamento */
+#loadingModal .modal-content {
+    background-color: #fff;
+    padding: 30px;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.emoji-container {
+    font-size: 3rem;
+    margin: 20px 0;
+    animation: shake 1s infinite alternate;
+}
+
+@keyframes shake {
+    0% { transform: translateX(-10px); }
+    100% { transform: translateX(10px); }
+}
+
+
 @keyframes fadeIn {
     from { opacity: 0; transform: translateY(-10px); }
     to { opacity: 1; transform: translateY(0); }
